# CGRahmenprogramm

A1_FraktaleSzene/: Aufgabe1.cpp  Aufgabe1.h  CMakeLists.txt
A1_Versuch1a/: Versuch1a.cpp
A3_Normalenvektoren/: Aufgabe3.cpp  CMakeLists.txt  FragmentShader.glsl  PhongFragmentShader.glsl  PhongVertexShader.glsl  VertexShader.glsl
A4_CubeMapping/: CMakeLists.txt  CubeMapping.cpp  SkyboxFragmentShader.glsl  SkyboxVertexShader.glsl  VertexShader.glsl
A5_DisplacementMapping/: CMakeLists.txt  DisplacementMapping.cpp  FragmentShader.glsl  TessControlShader.glsl  TessEvalShader.glsl  VertexShader.glsl
A5_GeometryShader/: CMakeLists.txt  FragmentShader.glsl  GeometryShader.cpp  SubdivideGeometryShader.glsl  SubdivideVertexShader.glsl  VertexShader.glsl
